continue to add papers

--- a/_publications/2010-03-01-Bouzebda.md
+++ b/_publications/2010-03-01-Bouzebda.md
@@ -2,7 +2,7 @@
 title: "Bootstrap of the Hill estimator: limit theorems"
 collection: publications
 permalink: /publication/2010-03-01-Bouzebda
-authors: 'S. Bouzebda and A. Keziou'
+authors: 'S. Bouzebda'
 excerpt: 'We develop a bootstrap method for estimating the Pareto index of an extreme value distribution. We begin by considering a sequence $X_1,\ldots,X_n$ of i.i.d. random variables with distribution function $F(\cdot)$ satisfying
 $$\lim_{x\rightarrow \infty}\frac{1-F(xt)}{1-F(x)}=t^{-\frac{1}{c}}~~\mbox{for all}~~ t>0.$$ [**Read more**](https://bouzebda.github.io/publication/2010-03-01-Bouzebda)'
 date: 2010-03-01
