continue to add papers

--- a/_publications/2011-04-01-Bouzebda.md
+++ b/_publications/2011-04-01-Bouzebda.md
@@ -8,7 +8,7 @@ the modified multivariate empirical copula process. In this work we extend the m
 process of Nikitin and Sporysheva (2009), which is defined by using a family of Gaussian processes
 of Deheuvels (2007b) to the multivariate case.  [**Read more**](https://bouzebda.github.io/publication/2011-04-01-Bouzebda)'
 date: 2011-04-01
-venue: 'Far East Journal of Theoretical Statistics'
+venue: 'Mathematical Methods of Statistics'
 ---
 ### S. Bouzebda
 We introduce some new nonparametic tests of independence which are functionals of
