continue to add papers

--- a/_publications/2012-04-01-Bouzebda.md
+++ b/_publications/2012-04-01-Bouzebda.md
@@ -3,7 +3,9 @@ title: "On the Strong Approximation of General Bootstrap of Empirical Copula Pro
 collection: publications
 permalink: /publication/2012-04-01-Bouzebda
 authors: 'S. Bouzebda'
-excerpt: 'The purpose of the present paper is to provide a strong invariance principle for the generalized bootstrapped empirical copula process with the rate of the approximation for multivariate empirical processes. As a by-product, we obtain a uniform-in-bandwidth consistency result for kernel-type estimators of copula derivatives, which is of its own interest. We introduce also the delta-sequence estimators of the copula derivatives.  [**Read more**](https://bouzebda.github.io/publication/2012-04-01-Bouzebda)'
+excerpt: 'The purpose of the present paper is to provide a strong invariance principle for the generalized bootstrapped empirical copula process with the rate of the approximation for multivariate empirical processes. 
+As a by-product, we obtain a uniform-in-bandwidth consistency result for kernel-type estimators of copula derivatives, which is of its own interest. We introduce also the delta-sequence estimators of the copula derivatives. 
+[**Read more**](https://bouzebda.github.io/publication/2012-04-01-Bouzebda)'
 date: 2012-04-01
 venue: 'Mathematical Methods of Statistics'
 ---
